--- a/src/Components/home.css
+++ b/src/Components/home.css
@@ -1,10 +1,22 @@
-.butn
-{
-    color: white;
-    background: cornflowerblue;
-    padding: 10px 40px;
-    margin: 10px;
-    border: none;
-    border-radius: 30px;
-    cursor: pointer;
+.content-main {
+  margin: 0 30px;
+}
+
+.action-btn-table {
+  display: flex;
+  flex-direction: column;
+}
+
+td {
+  text-transform: capitalize;
+}
+
+.butn {
+  color: white;
+  background: cornflowerblue;
+  padding: 10px 40px;
+  margin: 10px;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
 }
