--- a/src/Components/home.css
+++ b/src/Components/home.css
@@ -20,3 +20,12 @@ td {
   border-radius: 30px;
   cursor: pointer;
 }
+
+.notFoundPage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  text-align: center;
+  font-weight: bold;
+}
